<resources>
    <string name="app_name">Notebook</string>
    <string name="user_name">Default user</string>
    <string name="facebook_app_id">863933445362313</string>
    <string name="fb_login_protocol_scheme">fb863933445362313</string>
    <string name="facebook_client_token">04ebe34bdf43430cbb1578208d09ec4b</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras diam diam, condimentum et magna
        a, rhoncus sagittis erat. Aliquam sed tempor erat. Curabitur a orci lobortis, blandit velit vitae, elementum
        tortor. Phasellus non velit sit amet augue euismod fringilla a nec elit. Donec scelerisque feugiat risus, quis
        finibus justo sodales at. Aliquam sollicitudin cursus odio, sit amet euismod erat commodo et. Cras aliquet erat
        ut libero ornare molestie. Nam consequat ante velit, id lobortis purus blandit eget. Quisque venenatis sodales
        tincidunt. Pellentesque vel elementum augue. Sed a accumsan nibh. Curabitur facilisis odio vel nulla consequat,
        et commodo ligula efficitur.
        \nNunc efficitur, urna eget facilisis hendrerit, ligula lectus mattis odio, id luctus elit velit quis ligula.
        Aliquam erat volutpat. Integer tincidunt luctus ligula. Fusce in sem ac nunc porta fermentum. Vestibulum at mi
        vulputate, egestas mauris id, convallis quam. Integer lacinia orci libero, dapibus vehicula eros bibendum in.
        Curabitur sollicitudin lorem eu purus porta, sit amet sagittis urna luctus. In sagittis ipsum eget est
        ullamcorper commodo.
        \nPraesent ut facilisis ante, vel scelerisque purus. Ut accumsan, ipsum id consequat dapibus, arcu quam
        condimentum metus, sit amet fermentum sapien lorem nec erat. Aenean eu mollis diam, condimentum euismod elit. Ut
        eu porttitor enim, sit amet gravida eros. Morbi sollicitudin semper dolor id auctor. Phasellus tempus tincidunt
        leo, sed tempor quam aliquet efficitur. Donec consequat pretium pulvinar. Maecenas finibus leo quis varius
        lacinia. Donec sed finibus turpis. Aenean feugiat urna in felis placerat aliquet. Etiam consectetur orci et
        lobortis faucibus. Curabitur tristique, ex non imperdiet aliquam, lorem eros suscipit felis, et congue lectus
        sapien in urna. Curabitur dapibus bibendum sem, dictum blandit mauris.
        \nOrci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent at tortor
        semper est venenatis porttitor. Cras eget lacus vitae nisi pellentesque laoreet. Phasellus ultrices diam sed
        sollicitudin pulvinar. Aliquam sodales ante eget ipsum blandit ultricies. Nam vitae tortor leo. Aliquam erat
        volutpat. Ut pulvinar massa lacus, vitae vehicula lectus dignissim ac. Donec ligula purus, imperdiet dapibus
        urna eget, sagittis placerat dolor. Ut pharetra euismod nibh, ullamcorper varius nunc bibendum vitae. Sed
        suscipit vel metus non fermentum. Quisque commodo quis quam sit amet dictum. Suspendisse mattis mollis nibh sed
        dignissim. Morbi consequat mi a neque laoreet viverra. Aenean pulvinar dignissim arcu sit amet finibus.
        \nInteger vehicula, tortor a ultrices bibendum, libero magna sagittis ex, sit amet mattis odio metus sit amet
        nisl. Morbi mollis lacinia posuere. Cras nunc nisl, pretium vitae neque nec, consequat viverra dolor.
        Pellentesque ut euismod metus. Curabitur imperdiet, ligula ut laoreet varius, urna est blandit nulla,
        sollicitudin hendrerit metus magna a ante. Maecenas faucibus metus neque, eu hendrerit mauris accumsan in.
        Integer quam erat, tempor id sagittis et, scelerisque id justo. Praesent id congue risus. Ut nibh augue, viverra
        id tellus eget, dignissim euismod quam. Etiam sollicitudin, metus eget iaculis vulputate, diam elit pharetra
        sem, eu egestas tortor ligula vitae dui. Sed massa eros, iaculis id velit at, sodales vehicula urna. Nunc id
        lorem nunc.
    </string>
    <string name="welcome_log_in">Witaj\, zaloguj się!</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="register_now">Utwórz je teraz!</string>
    <string name="dont_have_an_account">Nie posiadasz konta?</string>
    <string name="log_in">Zaloguj</string>
    <string name="or">lub</string>
    <string name="continue_with_facebook">Kontynuuj przy pomocy Facebook\'a</string>
    <string name="continue_with_google">Kontynuuj przy pomocy Google\'a</string>
    <string name="trouble_signing_in">Problemy z logowaniem?</string>
    <string name="reset_password">Zresetuj hasło</string>
    <string name="account_recovery">Odzyskiwanie dostępu do konta</string>
    <string name="recover_access">Odzyskaj dostęp</string>
    <string name="create_an_account">Utwórz nowe konto !</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="create_account">Utwórz</string>
    <string name="already_have_an_account">Posiadasz już konto?</string>
    <string name="find_note">Znajdz notatkę</string>
    <string name="log_in_now">Zaloguj się !</string>
    <string name="enter_your_email_or_password">Wprowadź email lub hasło</string>
    <string name="registered">Zarejstrowano</string>
    <string name="authentication_failed">Uwierzytelnienie nieprawidłowe.</string>
    <string name="logged">Zalogowano.</string>
    <string name="check_your_email">Sprawdź email !</string>
    <string name="enter_your_email">Wprowadź email.</string>
    <string name="please_fill_all_fields">Uzupełnij wszystkie pola.</string>
    <string name="account_created_successfully">Konto utworzone pomyślnie.</string>
    <string name="cannot_create_an_account">Nie można utworzyć konta.</string>
    <string name="passwords_are_not_matching">Hasła nie są identyczne.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="database_url">https://tem-projekt-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="last_modify">"Last modify: "</string>
    <string name="last_update">"Zaktualizowano: "</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>