<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="165dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                    android:id="@+id/logo_image"
                    android:layout_width="293dp"
                    android:layout_height="95dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="TODO"
                    android:rotation="-10"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toTopOf="@+id/title_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/title_text"
                    style="@android:style/Widget.Material.TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/welcome_log_in"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="412dp"
                android:layout_height="721dp"
                android:gravity="center_horizontal|top"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout3" android:layout_marginTop="200dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    app:boxCollapsedPaddingTop="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeWidth="0.75dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:autofillHints="emailAddress"
                        android:hint="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    app:boxCollapsedPaddingTop="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeWidth="0.75dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:hint="@string/password"
                        android:linksClickable="false"
                        android:password="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/login_button"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="250dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/log_in"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView2"
                        style="@style/Widget.MaterialComponents.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/dont_have_an_account"/>

                <Button
                        android:id="@+id/register_now_button"
                        style="@style/Widget.Material3.Button.TextButton.Dialog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/register_now"
                        tools:ignore="TouchTargetSizeCheck"/>

            </LinearLayout>

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/or"
                    android:textAlignment="center"/>

            <Button
                    android:id="@+id/continue_facebook_button"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="250dp"
                    android:layout_height="58dp"
                    android:drawableLeft="@drawable/facebook"
                    android:text="@string/continue_with_facebook"/>

            <Button
                    android:id="@+id/continue_google_button"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="250dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/google"
                    android:text="@string/continue_with_google"
                    android:visibility="gone"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/reset_password_text"
                        style="@style/Widget.MaterialComponents.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/trouble_signing_in"
                        android:textColor="#B6B6B6"/>

                <Button
                        android:id="@+id/reset_password_button"
                        style="@style/Widget.Material3.Button.TextButton.Dialog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/reset_password"
                        android:textColor="#9C9C9C"
                        tools:ignore="TouchTargetSizeCheck"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>