<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                    android:id="@+id/logo_image"
                    android:layout_width="293dp"
                    android:layout_height="95dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="TODO"
                    android:rotation="-10"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toTopOf="@+id/register_title_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/register_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/create_an_account"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="81dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="721dp"
                android:gravity="center_horizontal|top"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    app:boxCollapsedPaddingTop="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeWidth="0.75dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:autofillHints="emailAddress"
                        android:hint="@string/email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    app:boxCollapsedPaddingTop="15dp"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeWidth="0.75dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:autofillHints="password"
                        android:hint="@string/password"
                        android:password="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeWidth="0.75dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_repeat_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:hint="@string/repeat_password"
                        android:password="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/login_button"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="250dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/create_account"/>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView2"
                        style="@style/Widget.MaterialComponents.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/already_have_an_account"/>

                <Button
                        android:id="@+id/login_now_button"
                        style="@style/Widget.Material3.Button.TextButton.Dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/log_in_now"/>

            </LinearLayout>

            <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/or"
                    android:textAlignment="center"/>

            <Button
                    android:id="@+id/continue_with_facebook"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="250dp"
                    android:layout_height="58dp"
                    android:drawableLeft="@drawable/facebook"
                    android:text="@string/continue_with_facebook"/>

            <Button
                    android:id="@+id/continue_with_google"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="250dp"
                    android:layout_height="58dp"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/google"
                    android:text="@string/continue_with_google"
                    android:visibility="invisible"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>